# terminal-rec-mp4

./: .gitignore  README.md  pyproject.toml  requirements.txt
recterminal/: asciicast2movie.py  recterminal.py  tty2img.py
