[project]
name = "recterminal"
version = "0.1.0"
description = "Records the terminal and outputs it as a mp4"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
  "asciinema",
  "pyte",
  "moviepy",
  "Pillow",
  "numpy",
  "fclist-cffi",
  "freetype-py"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.urls]
"Homepage" = "https://github.com/bind-systems/terminal-rec-mp4"
"Bug Tracker" = "https://github.com/bind-systems/terminal-rec-mp4/issues"

[project.scripts]
recterminal = "recterminal:recterminal"
